# project_chameleon

./: .gitattributes  .gitignore  .readthedocs.yaml  API_Specification.txt  CMakeLists.txt  Dockerfile  LICENSE  README.md  __init__.py  api.py  api_helpers.py  environment.yml  paper.bib  paper.md  paper_dce.md  pyproject.toml  xylib Install Instructions.txt  xylib_Install_Instructions_MacOS.txt
.ipynb_checkpoints/: pyproject-checkpoint.toml
2D3D STEM/: non4dstem.py
2D3D STEM/.ipynb_checkpoints/: 20240104 image export example-checkpoint.ipynb  non4dstem-checkpoint.py
4D STEM/: 4dstemarray.py
4D STEM/.ipynb_checkpoints/: 20240118 4DSTEM to 2D example (1)-checkpoint.ipynb  4dstemarray-checkpoint.py  stemarray4d-checkpoint.py
Instructions and Specifications/: API_JS_format.md  API_Specification.txt  XYlib ARM Install Instructions v1.rtf  expected_ARPES_file_structure.txt
MBE/: MBE.ipynb  SampleInformation.txt  SourceConfiguration.txt  mbeparser.py
MBE/.ipynb_checkpoints/: MBE-checkpoint.ipynb  mbeparser-checkpoint.py
MBE/Data/big/: BASF_Exactus.Reading.txt  EIES_Channel1_Emission.Reading.txt  EIES_Channel1_Rate.Measured.txt  EIES_Channel1_Thickness.Reading.txt  GM1_Cryo1_Temp.Reading.txt  GM1_TELEMARK_EBEAM_Emission_Current.Reading.txt  GM1_TELEMARK_EBEAM_Filament_Current.Reading.txt  GM1_TELEMARK_EBEAM_base.Measured.txt  GM1_Vacuum.Reading.txt  GM1_subs_center.Measured.txt  GM1_subs_center.OutputPercent.txt  GM1_subs_center.WorkingSetpoint.txt  GM1_subs_rot.Measured.txt  GM1_subs_rot.OutputPercent.txt  GM1_subs_rot.WorkingSetpoint.txt  Ga2O_Base.Measured.txt  Ga2O_Base.OutputPercent.txt  Ga2O_Tip.Measured.txt  Ga2O_Tip.OutputPercent.txt  GeO_Base.Measured.txt  GeO_Base.OutputPercent.txt  Growth module #1.IonGauge1.Measured.txt  Growth module #1.Manipulator.AtHomePosition.txt  Growth module #1.Manipulator.Get.txt  K_Base.Measured.txt  K_Base.OutputPercent.txt  Li_Base.Measured.txt  Li_Base.OutputPercent.txt  Nb2O5_Base.Measured.txt  Nb2O5_Base.OutputPercent.txt  Nb2O5_Base.WorkingSetpoint.txt  O3_Nozzle_Baratron.Measured.txt  O3_Nozzle_Baratron_Heater.Measured.txt  O3_Nozzle_Baratron_Heater.OutputPercent.txt  O3_Nozzle_Baratron_Reading.Reading.txt  O3_Nozzle_Direct.Measured.txt  O3_Nozzle_IonGauge.Measured.txt  O3_Nozzle_IonGauge.OutputPercent.txt  Side_Inlet_Baratron.Measured.txt  Side_Inlet_Baratron_Heater.Measured.txt  (+13 more)
MBE/Data/small/: AOut4.Value.txt  ARPES module #1.IonGauge.AtSetpoint.txt  ARPES module #1.ManualAck.txt  Al_base.DeviceMax.txt  (+397 more)
RHEED/: 16b 26.5.img  RHEED.ipynb  img-png.py  img-png.txt  rheedconverter.py
RHEED/.ipynb_checkpoints/: rheedconverter-checkpoint.py
STEM/: 20240104 image export example.ipynb
XRD/Bruker RAW/: test.RAW
XRD/BrukerRAW/: PDC_02232018_1_LDFC_MKS_-Ba2CaWO6-2_ROOM TEMP_12HR.xy  RAW_CSV.ipynb  brukerrawconverter.py  newxyconverter.ipynb
XRD/raw/: RAW_CSV.ipynb
conda/: meta.yaml
docs/: requirements.txt
docs/source/: arpes.rst  brukerrawbackground.rst  brukerrawconverter.rst  conf.py  config.py  docker.rst  fourdimension_stem.rst  hs2.rst  hs2converter.rst  index.rst  installing_chameleon.rst  introduction.rst  jeol_sem.rst  mbeparser.rst  modules.rst  non4dstem.rst  plugin.rst  ppmsmpms.rst  rheedconverter.rst  stemarray4d.rst
ppms-mpms/: dataholder.txt  metadata.txt  ppms-mpms.ipynb  ppmsmpms.py
ppms-mpms/.ipynb_checkpoints/: dataholder-checkpoint.txt  ppms-mpms-checkpoint.ipynb  ppmsmpms-checkpoint.py
project_chameleon/: Emissions Spectra Data - Sheet2.csv  arpes.py  brml_converter.py  brukerrawbackground.py  brukerrawconverter.py  get_image_dimensions.py  hs2converter.py  jeol_sem_converter.py  mbeparser.py  non4dstem.py  ppmsmpms.py  rheed_helpers.py  rheed_video_converter.py  rheedconverter.py  stemarray4d.py  xyconv.py
project_chameleon/2D3D STEM/: non4dstem.py
project_chameleon/2d3d_stem/: non4dstem.py
project_chameleon/4D STEM/: stemarray4d.py
project_chameleon/4d_stem/: stemarray4d.py
project_chameleon/MBE/: mbeparser.py
project_chameleon/RHEED/: rheedconverter.py
project_chameleon/fourdimension_stem/: stemarray4d.py
project_chameleon/ppms-mpms/: ppmsmpms.py
project_chameleon/ppmsmpms/: ppmsmpms.py
tests/: api_test.py  arpes_script_test.py  brml_script_test.py  brukerbackground_script_test.py  brukerraw_script_test.py  hs2_script_test.py  jeol_sem_script_test.py  mbe_script_test.py  non4dstem_script_test.py  ppmsmpms_script_test.py  rheed_script_test.py  stemarray4d_script_test.py  test_api.py  test_output.xlsx
(+346 files in other folders)
