[tool.poetry]
name = "project_chameleon"
version = "0.1.0"
description = "A package for transforming and querying different file formats commonly found in material science research"
authors = ["Peter Cauchy <peter.cauchy@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "project_chameleon" }]

[tool.poetry.dependencies]
python = ">=3.12.2"
sphinx = ">=8.1.3"
matplotlib = ">=3.9.0"
numpy = ">=1.26.4"
hyperspy = ">=2.1.0"
py4DSTEM = ">=0.14.15"
pandas = ">=2.2.2"
sphinx-rtd-theme = ">=1.0.0"
xylib-py = ">=1.6.1"

[tool.poetry.extras]
docs = ["sphinx-rtd-theme"]

[tool.poetry.scripts]
non4dstem = "project_chameleon.non4dstem:main"
stemarray4d = "project_chameleon.stemarray4d:main"
mbeparser = "project_chameleon.mbeparser:main"
ppmsmpms = "project_chameleon.ppmsmpms:main"
rheed = "project_chameleon.rheedconverter:main"
brukerraw = "project_chameleon.brukerrawconverter:main"
brukerrawbackground = "project_chameleon.brukerrawbackground:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
